--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
       <h1 id="logo">
         <a href="#">Fabian Goebel</a>
       </h1>
-      <p>Doctoral Student at ETH Zürich
-      <br/>Institute of Cartography and Geoinformation</p>
+      <p>Dr. sc. ETH Zürich
+      <br/>Passionate about leveraging
+      gaze as input for intelligent
+      adaptations of novel UIs to
+      facilitate the interaction and
+      improve the user experience.</p>
     </header>
     <nav id="nav">
       <ul>
@@ -74,9 +78,9 @@
       <div class="container">
         <header class="major">
           <h2>Fabian Göbel</h2>
-          <p>Dipl. Media Computer Scientist</p>
+          <p>Dr. sc. ETH Zürich</p>
         </header>
-        <p>Since February 2016 I am a doctorate student at the
+        <p>From February 2016 to October 2021 I was a doctorate student at the
         <a href="http://www.geogaze.org" target="_blank">GeoGazeLab</a> at the ETH Zürich, Swizerland. My research is focused on
         Eye Tracking and Implicit Interface Adaptions. In 2015 I received my Diploma Degree in Media Computer Science at the
         <a href="https://imld.de" target="_blank">Interactive Media Lab</a> at the Dresden University of Technology.</p>
@@ -86,6 +90,30 @@
     <section id="proj">
 	<div class="container">
     <h3>Research Projects</h3>	
+  	<span class="image left">
+      <a href="https://docs.microsoft.com/en-us/windows/mixed-reality/">
+        <img src="images/Internship.gif" alt="Internship" />
+      </a>
+  </span>
+  <h4>Researcher Intern at Microsoft</h4>
+  Exploration of novel multimodal interaction methods for Mixed Reality devices during a 4 month internship at Microsoft Mixed Reality Team. Evaluating the combination of gaze and hand input based on prototypes and user feedback to develop a more comfortable user experience on HoloLens 2. More specifically, we focused on relaxing the pinch gestures in combination with gaze targeting while avoiding unintended pinches (Midas Touch Effect).<br />
+  <p align="right"><a class="button primary small" href="https://docs.microsoft.com/en-us/windows/mixed-reality/" target="_blank">
+    More
+  </a>
+  <hr>
+  <span class="image left">
+    <a href="https://www.research-collection.ethz.ch/handle/20.500.11850/513243">
+      <img src="images/CoverDiss.png" alt="Dissertation" />
+    </a>
+ </span>
+  <h4>Visual Attentive User Interfaces for Feature-Rich Environments</h4>
+  This dissertation investigates leveraging live eye tracking for context-adaptive assistance on interactive maps. We focus on utilizing implicit gaze input for acquiring information about the users’ cognitive state, plans, and ongoing tasks to provide personalized assistance and adjust the visualization. We introduce a framework that enables automated logging of cartographic features a user has inspected by matching fixations with the rendered vector model of the map. We then discuss how this detailed information allows for detecting aspects, such as map task complexity, differences between users, and variations in search strategies. Building on this, we introduce a system that merges this data with explicit user input to predict the currently performed map task. This information is essential for the examined supportive adaptations. First, we present a novel gaze-adaptive legend that reduces the search space and optimizes its placement with regard to the user’s gaze. Furthermore, we introduce a gaze-adaptive map that provides highlights making it easier to revisit previously inspected Points of Interest. We also demonstrate how gaze-adaptive map lenses can reduce visual clutter without sacrificing details.<br />
+  <br />
+  <p align="right"><a class="button primary small" href="https://www.research-collection.ethz.ch/handle/20.500.11850/513243" target="_blank">
+    More
+  </a>
+  <hr>
+
 	<span class="image left">
         <a href="http://www.geogaze.org/igamaps/">
           <img src="images/IGAMAPS.gif" alt="IGAMaps" />
@@ -103,14 +131,13 @@
 		<li>How should a map adaptation be designed to be helpful?</li>
 		<li>What is the general user acceptance of gaze-based intention recognition on maps?</li>
 	</ul>
-	
+
     <br />
     <br />
     <p align="right"><a class="button primary small" href="http://www.geogaze.org/igamaps/" target="_blank">
       More
     </a>
     <hr>
-	
       <span class="image left">
         <a href="https://imld.de/en/study/theses/2015-2/diplomarbeit-fabian-goebel/">
           <img src="images/DA_Fabian-Goebel.jpg" alt="" />
@@ -393,14 +420,7 @@
       <div class="container">
         <h3>Contact Me</h3>
 		<h4>Fabian Göbel</h4>
-		PhD Student, ETH Zurich</br>
-		Geoinformation Engineering</br></br>
-		<a href="http://www.ikg.ethz.ch/" target="_blank">Institute of Cartography and Geoinformation</a></br>
-		<a href="http://www.gis.ethz.ch/en/" target="_blank">Chair of Geoinformation Engineering</a></br></br>
-		
-		<a href="http://www.mapsearch.ethz.ch/map.do?farbcode=c000&gebaeudeMap=HIL&" target="_blank">HIL</a><a href="http://www.rauminfo.ethz.ch/Rauminfo/grundrissplan.gif?gebaeude=HIL&geschoss=G&raumNr=28.1&" target="_blank">G 23.1</a></br>
-		Stefano-Franscini-Platz 5</br>
-		8093 Zurich, Switzerland</br>
+		Dr. sc. ETH Zurich
 </p>
         <ul class="icons">
           <li>
