--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     <!-- Two -->
     <section id="proj">
 	<div class="container">
-    <h3>Research Projects</h3>	
+    <h3>Research Projects</h3>
   	<span class="image left">
-      <a href="https://docs.microsoft.com/en-us/windows/mixed-reality/">
+      <a href="https://docs.microsoft.com/en-us/windows/mixed-reality/" target="_blank">
         <img src="images/Internship.gif" alt="Internship" />
       </a>
   </span>
@@ -102,7 +102,7 @@
   </a>
   <hr>
   <span class="image left">
-    <a href="https://www.research-collection.ethz.ch/handle/20.500.11850/513243">
+    <a href="https://www.research-collection.ethz.ch/handle/20.500.11850/513243" target="_blank">
       <img src="images/CoverDiss.png" alt="Dissertation" />
     </a>
  </span>
@@ -115,16 +115,16 @@
   <hr>
 
 	<span class="image left">
-        <a href="http://www.geogaze.org/igamaps/">
-          <img src="images/IGAMAPS.gif" alt="IGAMaps" />
+        <a href="http://www.geogaze.org/igamaps/" target="_blank">
+          <img src="images/IGAMAPS.gif" alt="IGAMaps"/>
         </a>
     </span>
-    <h4>Intention-Aware Gaze-Based Assistance on Maps (IGAMaps)</h4>Adaptive human computer interfaces can significantly 
-	facilitate the interaction with digital maps in application scenarios such as navigation, information search, and for 
-	users with physical limitations. A map system that is able to recognize its user’s information requirements fast and accurately 
-	could adapt the map content, thus increasing effectiveness and efficiency of interaction. Since maps are primarily perceived and 
-	explored with the visual sense, it is plausible to assume that a user’s gaze on a map can be used to recognize intentions and activities, 
-	which can then trigger map adaptation.The main goal of this research project consists in the investigation of methods for the recognition 
+    <h4>Intention-Aware Gaze-Based Assistance on Maps (IGAMaps)</h4>Adaptive human computer interfaces can significantly
+	facilitate the interaction with digital maps in application scenarios such as navigation, information search, and for
+	users with physical limitations. A map system that is able to recognize its user’s information requirements fast and accurately
+	could adapt the map content, thus increasing effectiveness and efficiency of interaction. Since maps are primarily perceived and
+	explored with the visual sense, it is plausible to assume that a user’s gaze on a map can be used to recognize intentions and activities,
+	which can then trigger map adaptation.The main goal of this research project consists in the investigation of methods for the recognition
 	of activities and intentions from visual attention during the interaction with maps. The project tries to answer the following questions:
 	<ul>
 		<li>Can we infer a map user’s activity and intention from the visual attention he or she is spending on the map (e.g., route planning, searching for a restaurant)?</li>
@@ -139,8 +139,8 @@
     </a>
     <hr>
       <span class="image left">
-        <a href="https://imld.de/en/study/theses/2015-2/diplomarbeit-fabian-goebel/">
-          <img src="images/DA_Fabian-Goebel.jpg" alt="" />
+        <a href="https://imld.de/en/study/theses/theses-2015/diplomarbeit-fabian-goebel/" target="_blank">
+          <img src="images/DA_Fabian-Goebel.jpg" alt="Diplomarbeit" />
         </a>
       </span>
     <h4>Diploma Thesis &quot;A Concept to Leverage the Visual Periphery for Parallel Information&quot;</h4>Over the last years,
@@ -162,8 +162,8 @@
     <hr>
 
       <span class="image left">
-        <a href="https://imld.de/en/research/research-projects/gaze-supported-foot-interaction/">
-          <img src="images/GBFI.jpg" alt="" />
+        <a href="https://imld.de/en/research/research-projects/gaze-supported-foot-interaction/" target="_blank">
+          <img src="images/GBFI.jpg" alt="Gaze-supported Foot Interaction" />
         </a>
       </span>
 
@@ -182,8 +182,8 @@
 	<hr>
 
       <span class="image left">
-        <a href="https://vimeo.com/37264194">
-          <img src="images/depthtouch.jpg" alt="" />
+        <a href="https://vimeo.com/37264194" target="_blank">
+          <img src="images/depthtouch.jpg" alt="DepthTouch" />
         </a>
       </span>
 
@@ -194,7 +194,8 @@
     prototype.
     <br />
     <br />
-    <p align="right"><a class="button primary small" href="https://vimeo.com/37264194" target="_blank">More
+    <p align="right"><a class="button primary small" href="https://vimeo.com/37264194" target="_blank">
+      More
     </a>
 	</div>
 	</section>
@@ -280,8 +281,8 @@
                 <a href="https://doi.org/10.1145/3204493.3204544" target="_blank">DOI: 10.1145/3204493.3204544</a></td>
               </tr>
                 <td>2018</td>
-                <td>Kiefer P., Giannopoulos I., <b>Göbel F.</b>, Raubal M. and Duchowski, A.T. (2018).</br><i> 
-				ET4S Eye Tracking for Spatial Research, Proceedings of the 3rd International Workshop.</i> 
+                <td>Kiefer P., Giannopoulos I., <b>Göbel F.</b>, Raubal M. and Duchowski, A.T. (2018).</br><i>
+				ET4S Eye Tracking for Spatial Research, Proceedings of the 3rd International Workshop.</i>
                 <br />
                 <a href="https://doi.org/10.3929/ethz-b-000222256" target="_blank">DOI: 10.3929/ethz-b-000222256</a></td>
 				</tr>
@@ -294,8 +295,8 @@
               </tr>
 			<tr>
                 <td>2017</td>
-                <td><b>Göbel F.</b>, Kiefer P. and Raubal M. (2017).</br><i> 
-				FeaturEyeTrack: A Vector Tile-Based Eye Tracking Framework for Interactive Maps.</i> 
+                <td><b>Göbel F.</b>, Kiefer P. and Raubal M. (2017).</br><i>
+				FeaturEyeTrack: A Vector Tile-Based Eye Tracking Framework for Interactive Maps.</i>
 				In Societal Geo-Innovation : short papers, posters and poster abstracts of the 20th AGILE Conference on Geographic Information Science, Editors: A Bregt, T Sarjakoski, R. van Lammeren, F. Rip
                 <br/>
                 <a href="https://n.ethz.ch/~goebelf/download/103_ShortPaper_in_PDF.pdf" target="_blank">Download</a></td>
@@ -303,7 +304,7 @@
 			   <tr>
                 <td>2016</td>
                 <td><b>Göbel F.</b>, Giannopoulos I. and Raubal M. (2016).</br>
-				<i> The Importance of Visual Attention for Adaptive Interfaces.</i> 
+				<i> The Importance of Visual Attention for Adaptive Interfaces.</i>
 				In Proceedings of the 18th International Conference on Human-Computer Interaction with Mobile Devices and Services Adjunct (MobileHCI '16), Florence, Italy
                 <br/>
                 <a href="http://dx.doi.org/10.1145/2957265.2962659" target="_blank">DOI: 10.1145/2957265.2962659</a></td>
@@ -456,7 +457,7 @@
       </div>
     </section>
   </div>
-  
+
   <!-- Scripts -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery.scrollex.min.js"></script>
