--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
             <tbody>
 				<tr>
 			    <td>2020</td>
+
+          <span class="image left">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/a_-bVoP8EUU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </span>
+
 				<td><b>Göbel F.</b>, Kurzhals K., Schinazi V. R., Kiefer P., Raubal M. (2020).</br>
 				<i>Gaze-Adaptive Lenses for Feature-Rich Information Spaces.</i> In Proceedings of ETRA '20 Proceedings of the 12th ACM Symposium on Eye Tracking Research & Applications (ETRA &#39;20), Stuttgart, Germany, 2020.
                 <br/>
@@ -222,7 +227,8 @@
               </tr>
 			<tr>
 			    <td>2020</td>
-				<td>Kurzhals K., <b>Göbel F.</b>, Angerbauer K., Sedlmair M., Raubal M. (2020). (Honorable mention)</br>
+				<td>Kurzhals K., <b>Göbel F.</b>, Angerbauer K., Sedlmair M., Raubal M. (2020).
+        </br>(Honorable mention)</br>
 				<i>A View on the Viewer: Gaze-Adaptive Captions for Videos. </i> In Proceedings of CHI Conference on Human Factors in Computing Systems (CHI &#39;20), Honolulu, Hawaii, USA, 2020.
                 <br/>
 				<a href="https://doi.org/10.1145/3313831.3376266" target="_blank">DOI: 10.1145/3313831.3376266</a>
