--- a/index.html
+++ b/index.html
@@ -207,17 +207,15 @@
             <tbody>
 				<tr>
 			    <td>2020</td>
-
-          <span class="image left">
-            <iframe width="280" height="157" src="https://www.youtube.com/embed/a_-bVoP8EUU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </span>
-
 				<td><b>Göbel F.</b>, Kurzhals K., Schinazi V. R., Kiefer P., Raubal M. (2020).</br>
 				<i>Gaze-Adaptive Lenses for Feature-Rich Information Spaces.</i> In Proceedings of ETRA '20 Proceedings of the 12th ACM Symposium on Eye Tracking Research & Applications (ETRA &#39;20), Stuttgart, Germany, 2020.
                 <br/>
 				<a href="https://doi.org/10.1145/3379155.3391323" target="_blank">DOI: 10.1145/3379155.3391323</a>
-                </td>
-              </tr>
+        <span class="image right">
+          <iframe width="280" height="157" src="https://www.youtube.com/embed/a_-bVoP8EUU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </span>
+        </td>
+        </tr>
 				<tr>
 			    <td>2020</td>
 				<td><b>Göbel F.</b>, Kurzhals K., Raubal M., Schinazi V. R. (2020).</br>
