--- a/index.html
+++ b/index.html
@@ -226,7 +226,11 @@
               </tr>
 			<tr>
 			    <td>2020</td>
-				<td>Kurzhals K., <b>Göbel F.</b>, Angerbauer K., Sedlmair M., Raubal M. (2020).
+				<td>
+          <span class="image right">
+            <iframe width="280" height="157" src="https://www.youtube.com/embed/L9SwDEgQBpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </span>
+          Kurzhals K., <b>Göbel F.</b>, Angerbauer K., Sedlmair M., Raubal M. (2020).
         </br>(Honorable mention)</br>
 				<i>A View on the Viewer: Gaze-Adaptive Captions for Videos. </i> In Proceedings of CHI Conference on Human Factors in Computing Systems (CHI &#39;20), Honolulu, Hawaii, USA, 2020.
                 <br/>
@@ -235,7 +239,8 @@
               </tr>
 			<tr>
 			    <td>2019</td>
-				<td><b>Göbel F.</b>, Kiefer P. (2019).</br>
+				<td>
+          <b>Göbel F.</b>, Kiefer P. (2019).</br>
 				<i>POITrack: Improving Map-Based Planning with Implicit POI Tracking. </i> In Eye Tracking for Spatial Research (ET4S@ETRA &#39;19), Denver, Colorado, USA, 2019.
                 <br/>
 				<a href="https://doi.org/10.1145/3317959.3321491" target="_blank">DOI: 10.1145/3317959.3321491</a>
@@ -280,7 +285,11 @@
               </tr>
 			  <tr>
 				<td>2018</td>
-				<td><b>Göbel F.</b>, Kiefer P., Giannopoulos I., Duchowski, A.T. and Raubal M. (2018).</br>
+				<td>
+          <span class="image right">
+          <iframe width="280" height="157" src="https://www.youtube.com/embed/H8VR3d5DyQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </span>
+          <b>Göbel F.</b>, Kiefer P., Giannopoulos I., Duchowski, A.T. and Raubal M. (2018).</br>
 				<i> Improving Map Reading with Gaze-Adaptive Legends. </i> In ETRA ’18: 2018 Symposium on Eye Tracking Research and Applications.
                 <br/>
                 <a href="https://doi.org/10.1145/3204493.3204544" target="_blank">DOI: 10.1145/3204493.3204544</a></td>
@@ -293,7 +302,11 @@
 				</tr>
 				<tr>
 				<td>2018</td>
-				<td><b>Göbel F.</b>, Bakogiannis N., Henggeler K., Tschümperlin R., Xu Y., Kiefer P. and Raubal M. (2018).</br>
+				<td>
+          <span class="image right">
+          <iframe width="280" height="157" src="https://www.youtube.com/embed/uqO60zgmQzM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </span>
+          <b>Göbel F.</b>, Bakogiannis N., Henggeler K., Tschümperlin R., Xu Y., Kiefer P. and Raubal M. (2018).</br>
 				<i> A Public Gaze-Controlled Campus Map. </i> 3rd International Workshop on Eye Tracking for Spatial Research.
                 <br/>
                 <a href="https://doi.org/10.3929/ethz-b-000222491" target="_blank">DOI: 10.3929/ethz-b-000222491</a></td>
@@ -316,7 +329,11 @@
               </tr>
               <tr>
                 <td>2015</td>
-                <td>Klamka K, Siegel A., Vogt S.,
+                <td>
+<span class="image right">
+<iframe width="280" height="157" src="https://www.youtube.com/embed/3eCjiPRn44Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</span>
+                  Klamka K, Siegel A., Vogt S.,
                 <b>Göbel F.</b>, Stellmach S. and Dachselt R. (2015).</br> <i> Look &amp; Pedal: Hands-free Navigation in Zoomable Information
                 Spaces through Gaze-supported Foot Input.</i>  In Proceedings of the 2015 ACM on International Conference on Multimodal
                 Interaction (ICMI &#39;15). ACM, New York, NY, USA, 123-130.
@@ -326,6 +343,9 @@
               <tr>
                 <td>2013</td>
                 <td>
+                  <span class="image right">
+                  <iframe width="280" height="157" src="https://www.youtube.com/embed/9ms-Ng4LSz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </span>
                 <b>Göbel F.</b>, Klamka K, Siegel A., Vogt S., Stellmach S. and Dachselt R. (2013).</br> <i> Gaze-supported Foot Interaction in
                 Zoomable Information Spaces. Interactivity at CHI &#39;13.</i>  In Proc. of CHI &#39;13 Extended Abstracts on Human
                 Factors in Computing Systems (CHI EA &#39;13). ACM, New York, NY, USA, 3059-3062.
