--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 		Dr. sc. ETH Zurich
         <ul class="icons">
           <li>
-            <a href="mailto:goebelf@ethz.ch" class="icon solid fa-envelope">
+            <a href="mailto:fabian.goebel@bluewin.ch" class="icon solid fa-envelope">
               <span class="label">Mail</span>
             </a>
           </li>
