--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer>
       <ul class="icons">
         <li>
-		  <a href="#mail" class="icon solid fa-envelope">
+		  <a href="mailto:fabian.goebel@bluewin.ch" class="icon solid fa-envelope">
             <span class="label">Email</span>
           </a>
 		  </li>
